--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 01_pre_pro/02_inp/forcing_gwo_inter_rin.mat
 01_pre_pro/02_inp/forcing_gwo_inter_wnd.mat
 01_pre_pro/02_inp/forcing_gwo_interp.mat
+01_pre_pro/02_inp/tokyobay_wnd.nc
